--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <p>HTML5 Demo</p>
 </hgroup>
 
-Demo <a href="/forms">Form elements</a>
+<ul>
+<li>Demo of <a href="/forms">Form elements</a></li>
+<li>Demo of <a href="/canvas">Canvas</a></li>
+</ul>
 </body>
 </html>
