Re-org files and demo of dedicated web worker

--- a/app/canvas/index.html
+++ b/app/canvas/index.html
@@ -3,8 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <script src="script.js"></script>
-    <title>Demo HTML5</title>
+    <head><title>HTML5 Demo - Canvas</title></head>
 </head>
 <body style="background-color: green">
     <section id="mycanvasarea">
