--- a/app/gradients/index.html
+++ b/app/gradients/index.html
@@ -3,8 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <script src="script.js"></script>
-    <title>Demo HTML5</title>
+    <head><title>HTML5 Demo - Gradients</title></head>
 </head>
 <body style="background-color: black">
     <section id="mycanvasarea">
