--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to HTML 5 Demo Pages.</h3>
 
 <ul>
-<li>Demo of <a href="/app/forms">Form elements</a></li>
-<li>Demo of <a href="/app/canvas">Canvas</a></li>
-<li>Demo of <a href="/app/canvas">Gradients</a></li>
-<li>Demo of <a href="/app/web-workers/dedicated">Dedicated Web Worker</a></li>
+<li>Demo of <a href="/app/forms/">Form elements</a></li>
+<li>Demo of <a href="/app/canvas/">Canvas</a></li>
+<li>Demo of <a href="/app/gradients/">Gradients</a></li>
+<li>Demo of <a href="/app/web-workers/dedicated/">Dedicated Web Worker</a></li>
 </ul>
 
 <h3>
